--- a/ros/src/sd_teleop/config/sd_teleop.yaml
+++ b/ros/src/sd_teleop/config/sd_teleop.yaml
@@ -5,6 +5,7 @@ r1:
     max_angular_z_velocity: 3.0
     boost_velocity_ratio: 2.0
     cmd_vel_sources: [cmd_vel_auto, cmd_vel_teleop]
+    joy_topic: /r1/joy
 
   joy:
     dev: /dev/input/js0
@@ -21,6 +22,7 @@ r2:
     max_angular_z_velocity: 3.0
     boost_velocity_ratio: 2.0
     cmd_vel_sources: [cmd_vel_auto, cmd_vel_teleop]
+    joy_topic: /r2/joy
 
   joy:
     dev: /dev/input/js0
