--- a/ros/src/sd_teleop/config/sd_teleop.yaml
+++ b/ros/src/sd_teleop/config/sd_teleop.yaml
@@ -4,7 +4,7 @@ r1:
     max_linear_y_velocity: 0.3
     max_angular_z_velocity: 3.0
     boost_velocity_ratio: 2.0
-    cmd_vel_sources: [cmd_vel_auto, cmd_vel_teleop]
+    cmd_vel_sources: [/r1/cmd_vel_auto, /r1/teleop/cmd_vel]
     joy_topic: /r1/joy
 
   joy:
@@ -15,13 +15,17 @@ r1:
     # Seconds
     coalesce_interval: 0.0
 
+  cmd_vel_switcher:
+    source_topic: /r1/teleop/cmd_vel_source
+    output_topic: /r1/cmd_vel
+
 r2:
   teleop:
     max_linear_x_velocity: 0.2
     max_linear_y_velocity: 0.0
     max_angular_z_velocity: 3.0
     boost_velocity_ratio: 2.0
-    cmd_vel_sources: [cmd_vel_auto, cmd_vel_teleop]
+    cmd_vel_sources: [/r2/cmd_vel_auto, /r2/teleop/cmd_vel]
     joy_topic: /r2/joy
 
   joy:
@@ -31,3 +35,7 @@ r2:
     autorepeat_rate: 20.0
     # Seconds
     coalesce_interval: 0.0
+
+  cmd_vel_switcher:
+    source_topic: /r2/teleop/cmd_vel_source
+    output_topic: /r2/cmd_vel
