--- a/ros/src/sd_teleop/config/sd_teleop.yaml
+++ b/ros/src/sd_teleop/config/sd_teleop.yaml
@@ -1,33 +1,14 @@
-r1:
-  teleop:
-    max_linear_x_velocity: 0.3
-    max_linear_y_velocity: 0.3
-    max_angular_z_velocity: 3.0
-    boost_velocity_ratio: 2.0
-    cmd_vel_sources: [/r1/cmd_vel_auto, /r1/teleop/cmd_vel]
-    joy_topic: /r1/joy
+teleop:
+  max_linear_x_velocity: 0.3
+  max_linear_y_velocity: 0.3
+  max_angular_z_velocity: 3.0
+  boost_velocity_ratio: 2.0
+  joy_topic: joy
 
-  joy:
-    dev: /dev/input/js0
-    deadzone: 0.20
-    # Hertz
-    autorepeat_rate: 20.0
-    # Seconds
-    coalesce_interval: 0.0
-
-r2:
-  teleop:
-    max_linear_x_velocity: 0.2
-    max_linear_y_velocity: 0.0
-    max_angular_z_velocity: 3.0
-    boost_velocity_ratio: 2.0
-    cmd_vel_sources: [/r2/cmd_vel_auto, /r2/teleop/cmd_vel]
-    joy_topic: /r2/joy
-
-  joy:
-    dev: /dev/input/js0
-    deadzone: 0.20
-    # Hertz
-    autorepeat_rate: 20.0
-    # Seconds
-    coalesce_interval: 0.0
+joy:
+  dev: /dev/input/js0
+  deadzone: 0.20
+  # Hertz
+  autorepeat_rate: 20.0
+  # Seconds
+  coalesce_interval: 0.0
