--- a/ros/src/sd_control/config/r2_control.yaml
+++ b/ros/src/sd_control/config/r2_control.yaml
@@ -28,7 +28,7 @@ mobile_base_controller:
   cmd_vel_timeout: 0.5
 
   # Base frame_id
-  base_frame_id: base_link #default: base_link
+  base_frame_id: 'r2/base_link' #default: base_link
 
   # Velocity and acceleration limits
   # Whenever a min_* is unspecified, default to -max_*
