--- a/ros/src/sd_gazebo/CMakeLists.txt
+++ b/ros/src/sd_gazebo/CMakeLists.txt
@@ -8,6 +8,11 @@ project(sd_gazebo)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+    geometry_msgs
+    nav_msgs
+    tf2_ros
+    tf2_geometry_msgs
+    roscpp
 )
 
 ## System dependencies are found with CMake's conventions
@@ -129,7 +134,9 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/sd_gazebo_node.cpp)
+add_executable(ground_truth_tf_broadcaster
+    src/ground_truth_tf_broadcaster.cpp
+)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -139,12 +146,15 @@ include_directories(
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-# add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(ground_truth_tf_broadcaster
+    ${${PROJECT_NAME}_EXPORTED_TARGETS}
+    ${catkin_EXPORTED_TARGETS}
+)
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(${PROJECT_NAME}_node
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries(ground_truth_tf_broadcaster
+  ${catkin_LIBRARIES}
+)
 
 #############
 ## Install ##
