--- a/ros/src/sd_control/config/r1_control.yaml
+++ b/ros/src/sd_control/config/r1_control.yaml
@@ -2,3 +2,66 @@
 joint_state_controller:
   type: joint_state_controller/JointStateController
   publish_rate: 100
+
+#left_wheel_joint_velocity_controller:
+#  type: effort_controllers/JointVelocityController
+#  joint: r1/left_wheel_joint
+#  pid: {p: 5.0, i: 0.005, d: 0.0}
+
+#back_wheel_joint_velocity_controller:
+#  type: effort_controllers/JointVelocityController
+#  joint: r1/back_wheel_joint
+#  pid: {p: 5.0, i: 0.005, d: 0.0}
+
+#right_wheel_joint_velocity_controller:
+#  type: effort_controllers/JointVelocityController
+#  joint: r1/right_wheel_joint
+#  pid: {p: 5.0, i: 0.005, d: 0.0}
+
+mobile_base_controller:
+  type        : sd_control/ThreeOmniWheelsDriveController
+  left_wheel  : 'left_wheel_to_base'
+  right_wheel : 'right_wheel_to_base'
+  back_wheel : 'back_wheel_to_base'
+
+  publish_rate: 50.0               # default: 50
+  publish_cmd: true
+  enable_odom_tf: false
+  
+  pose_covariance_diagonal : [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
+  twist_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
+
+  # Distance between the wheel and the robot center
+  wheel_to_center : 0.175
+
+  # Wheel radius
+  wheel_radius : 0.029
+
+  # Velocity commands timeout [s], default 0.5
+  cmd_vel_timeout: 0.5
+
+  # Base frame_id (default: base_link)
+  base_frame_id: base_link
+
+  # Velocity and acceleration limits
+  # Whenever a min_* is unspecified, default to -max_*
+  linear:
+    x:
+      has_velocity_limits    : true
+      max_velocity           : 10.30  # m/s
+      has_acceleration_limits: true
+      max_acceleration       : 10.15  # m/s^2
+      has_jerk_limits        : false
+    y:
+      has_velocity_limits    : true
+      max_velocity           : 10.30  # m/s
+      has_acceleration_limits: true
+      max_acceleration       : 10.15  # m/s^2
+      has_jerk_limits        : false
+  angular:
+    z:
+      has_velocity_limits    : true
+      max_velocity           : 10.90  # rad/s
+      has_acceleration_limits: true
+      max_acceleration       : 10.45  # rad/s^2
+      has_jerk_limits        : false
