--- a/ros/src/sd_control/config/r1_control.yaml
+++ b/ros/src/sd_control/config/r1_control.yaml
@@ -27,6 +27,7 @@ mobile_base_controller:
   publish_rate: 50.0               # default: 50
   publish_cmd: true
   enable_odom_tf: false
+  open_loop: false
   
   pose_covariance_diagonal : [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
   twist_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
@@ -38,7 +39,7 @@ mobile_base_controller:
   wheel_radius : 0.029
 
   # Velocity commands timeout [s], default 0.5
-  cmd_vel_timeout: 0.5
+  cmd_vel_timeout: 0.25
 
   # Base frame_id (default: base_link)
   base_frame_id: base_link
@@ -48,20 +49,20 @@ mobile_base_controller:
   linear:
     x:
       has_velocity_limits    : true
-      max_velocity           : 10.30  # m/s
+      max_velocity           : 0.60  # m/s
       has_acceleration_limits: true
-      max_acceleration       : 10.15  # m/s^2
+      max_acceleration       : 0.50  # m/s^2
       has_jerk_limits        : false
     y:
       has_velocity_limits    : true
-      max_velocity           : 10.30  # m/s
+      max_velocity           : 0.60  # m/s
       has_acceleration_limits: true
-      max_acceleration       : 10.15  # m/s^2
+      max_acceleration       : 0.50  # m/s^2
       has_jerk_limits        : false
   angular:
     z:
       has_velocity_limits    : true
-      max_velocity           : 10.90  # rad/s
+      max_velocity           : 1.80  # rad/s
       has_acceleration_limits: true
-      max_acceleration       : 10.45  # rad/s^2
+      max_acceleration       : 0.90  # rad/s^2
       has_jerk_limits        : false
