Use filtered scans and update footprint

--- a/ros/src/sd_navigation/config/r2_costmap_common_params.yaml
+++ b/ros/src/sd_navigation/config/r2_costmap_common_params.yaml
@@ -1,6 +1,6 @@
 obstacle_range: 2.5
 raytrace_range: 3.0
-footprint: [[-0.105, 0.115], [0.075, 0.115], [0.105, 0.045], [0.105, -0.045], [0.075, -0.115], [-0.105, -0.115]]
+footprint: [[-0.075, 0.130], [0.075, 0.130], [0.075, -0.130], [-0.075, -0.130]]
 #robot_radius: ir_of_robot
 inflation_radius: 0.005
 cost_scaling_factor: 10.0
@@ -10,7 +10,7 @@ observation_sources: lidar sonar_left sonar_right
 lidar: {
   sensor_frame: r2/lidar_link,
   data_type: LaserScan,
-  topic: /r2/laser/scan,
+  topic: /r2/laser/scan_filtered,
   clearing: true,
   marking: true
 }
