--- a/ros/src/sd_control/config/r2_control.yaml
+++ b/ros/src/sd_control/config/r2_control.yaml
@@ -9,7 +9,7 @@ mobile_base_controller:
   right_wheel : 'right_wheel_to_base'
   publish_rate: 50.0               # default: 50
   publish_cmd: true
-  enable_odom_tf: true
+  enable_odom_tf: false
   
   pose_covariance_diagonal : [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
   twist_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
