--- a/ros/src/sd_hardware_interface/config/r2_hardware_interface.yaml
+++ b/ros/src/sd_hardware_interface/config/r2_hardware_interface.yaml
@@ -16,9 +16,18 @@ hardware_interface:
   pwm_topics:
     - right/pwm
     - left/pwm
+  pwm_max:
+    - 255
+    - 255
   encoder_steps_for_one_wheel_revolution:
     - 140.0
     - 140.0
+  velocity_controllers_velocity_to_pwm: 
+    - 1400.0 # Unit : 1m/s to PWM
+    - 1400.0
+  velocity_controllers_friction_pwm: 
+    - 30.0 # Minimum PWM allowing the wheel to turn
+    - 30.0
   velocity_controllers_pid_p:
     - 5.0
     - 5.0
