Add mrpt_localization dependency

--- a/ros/src/sd_localization/CMakeLists.txt
+++ b/ros/src/sd_localization/CMakeLists.txt
@@ -9,6 +9,7 @@ project(sd_localization)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   robot_localization
+  mrpt_localization
 )
 
 ## System dependencies are found with CMake's conventions
