--- a/ros/src/sd_navigation/config/r2_navigation.yaml
+++ b/ros/src/sd_navigation/config/r2_navigation.yaml
@@ -1,32 +1,2 @@
-global_costmap:
-  global_frame: map
-  robot_base_frame: r2/base_link
-  update_frequency: 5.0
-  publish_frequency: 2.0
-  static_map: true
-
-local_costmap:
-  global_frame: r2/odom
-  robot_base_frame: r2/base_link
-  update_frequency: 5.0
-  publish_frequency: 2.0
-  static_map: false
-  rolling_window: true
-  width: 2.0
-  height: 3.0
-  origin_x: -2.0
-  origin_y: 0.0
-  resolution: 0.01
-  transform_tolerance: 0.2
-  
-TrajectoryPlannerROS:
-  max_vel_x: 0.45
-  min_vel_x: 0.1
-  max_vel_theta: 1.0
-  min_in_place_vel_theta: 0.4
-
-  acc_lim_theta: 3.2
-  acc_lim_x: 2.5
-  acc_lim_y: 2.5
-
-  holonomic_robot: false
+r2_map_from_attitude:
+  attitude_treshold: 0.05
