--- a/ros/src/sd_navigation/package.xml
+++ b/ros/src/sd_navigation/package.xml
@@ -53,14 +53,17 @@
   <build_depend>map_server</build_depend>
   <build_depend>move_base</build_depend>
   <build_depend>teb_local_planner</build_depend>
+  <build_depend>dynamic_reconfigure</build_depend>
   <build_export_depend>costmap_2d</build_export_depend>
   <build_export_depend>map_server</build_export_depend>
   <build_export_depend>move_base</build_export_depend>
   <build_export_depend>teb_local_planner</build_export_depend>
+  <build_export_depend>dynamic_reconfigure</build_export_depend>
   <exec_depend>costmap_2d</exec_depend>
   <exec_depend>map_server</exec_depend>
   <exec_depend>move_base</exec_depend>
   <exec_depend>teb_local_planner</exec_depend>
+  <exec_depend>dynamic_reconfigure</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
