--- a/ros/src/sd_localization/package.xml
+++ b/ros/src/sd_localization/package.xml
@@ -52,7 +52,7 @@
   <build_depend>robot_localization</build_depend>
   <build_export_depend>robot_localization</build_export_depend>
   <exec_depend>robot_localization</exec_depend>
-  <exec_depend>mrpt_localization</exec_depend>
+  <exec_depend>amcl</exec_depend>
   <exec_depend>imu_tools</exec_depend>
 
 
