Allow to disable velocity controller

--- a/ros/src/sd_hardware_interface/config/r1_hardware_interface.yaml
+++ b/ros/src/sd_hardware_interface/config/r1_hardware_interface.yaml
@@ -6,6 +6,7 @@ control_loop:
 
 hardware_interface:
   is_quadrature_encoder : true
+  velocity_controller_enabled : true
   timeout: 1.0 # seconds
   joints: 
     - right_wheel_to_base
@@ -19,6 +20,10 @@ hardware_interface:
     - pwm/right
     - pwm/left
     - pwm/back
+  speed_topics:
+    - speed/right
+    - speed/left
+    - speed/back
   pwm_max:
     - 4096
     - 4096
