--- a/ros/src/sd_hardware_interface/config/r1_hardware_interface.yaml
+++ b/ros/src/sd_hardware_interface/config/r1_hardware_interface.yaml
@@ -1,6 +1,6 @@
 control_loop:
-  loop_hz: 10 # in Hz
-  cycle_time_error_threshold: 0.005 # in seconds (Means an 50% error threshold for 10Hz)
+  loop_hz: 100 # in Hz
+  cycle_time_error_threshold: 0.1 # in seconds (Means an 10% error threshold for 100Hz)
   print_state: true   # true to see controller state in console (every second)
   publish_state: true # publish regulator state to topics
 
@@ -33,26 +33,26 @@ hardware_interface:
     - 206.0
     - 206.0
   velocity_controllers_velocity_to_pwm: 
-    - 25.0  # Unit : if pwm = velocity_controllers_velocity_to_pwm, wheel rotates at 1 rad/s
-    - 25.0
-    - 25.0
+    - 725.0  # Unit : if pwm = velocity_controllers_velocity_to_pwm, wheel rotates at 1 rad/s
+    - 725.0
+    - 725.0
   velocity_controllers_friction_pwm: 
     - 450.0 # Minimum PWM allowing the wheel to turn
     - 450.0
     - 450.0  
   velocity_controllers_pid_p:
-    - 500.0
-    - 500.0
-    - 500.0
+    - 124.0
+    - 124.0
+    - 124.0
   velocity_controllers_pid_i:
-    - 0.5
-    - 0.5
-    - 0.5
+    - 0.0010
+    - 0.0010
+    - 0.0010
   velocity_controllers_pid_d:
-    - 0.0
-    - 0.0
-    - 0.0
+    - 0.001
+    - 0.001
+    - 0.001
 
 rosserial_server:
-  baud: 57600
+  baud: 1000000
   port: /dev/ttyUSB0
