--- a/ros/src/sd_teleop/config/sd_teleop.yaml
+++ b/ros/src/sd_teleop/config/sd_teleop.yaml
@@ -14,9 +14,17 @@ r2:
     boost_velocity_ratio: 2.0
     joy_topic: joy
 
-joy:
-  dev: /dev/input/js0
+joy_xbox:
+  dev: /dev/input/by-id/usb-©Microsoft_Xbox_360_Wireless_Receiver_for_Windows_E1B7FC80-joystick
   deadzone: 0.20
+  # Hertz
+  autorepeat_rate: 20.0
+  # Seconds
+  coalesce_interval: 0.0
+
+joy_ps:
+  dev: /dev/input/by-id/usb-Sony_Computer_Entertainment_Wireless_Controller-joystick
+  deadzone: 0.05
   # Hertz
   autorepeat_rate: 20.0
   # Seconds
