Build&deploy on raspberry

--- a/ros/src/sd_control/CMakeLists.txt
+++ b/ros/src/sd_control/CMakeLists.txt
@@ -27,7 +27,10 @@ add_library(${PROJECT_NAME} src/three_omni_wheels_drive_controller.cpp src/three
 target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
 
 install(DIRECTORY include/${PROJECT_NAME}/
-        DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  FILES_MATCHING PATTERN "*.h"
+  PATTERN ".svn" EXCLUDE
+)
 
 install(TARGETS ${PROJECT_NAME}
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
@@ -37,3 +40,9 @@ install(TARGETS ${PROJECT_NAME}
 
 install(FILES three_omni_wheels_controller_plugins.xml
     DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+
+install(DIRECTORY
+  config
+  launch
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
