--- a/ros/src/sd_teleop/CMakeLists.txt
+++ b/ros/src/sd_teleop/CMakeLists.txt
@@ -97,3 +97,16 @@ target_link_libraries(joy_switcher_node
 target_link_libraries(teleop_node
   ${catkin_LIBRARIES}
 )
+
+## Mark executables and/or libraries for installation
+install(TARGETS joy_convert_node joy_switcher_node teleop_node
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
+install(DIRECTORY
+  config
+  launch
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
