Independant reconfigure for each wheel

--- a/ros/src/sd_hardware_interface/cfg/PID.cfg
+++ b/ros/src/sd_hardware_interface/cfg/PID.cfg
@@ -5,10 +5,13 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
 
-gen.add("velocity_to_pwm", double_t, 0, "Feed forward gain (convert a command of 1 rad/s to an effort (pwm)", 37.0, 0.0, 100.0)
-gen.add("friction_pwm", double_t, 0, "Minimum PWM value that allows the robot to move (PWM)", 1140.0, 0.0, 2000.0)
-gen.add("pid_p", double_t, 0, "PID - Proportionnal gain", 37.0, 0.0, 100.0)
-gen.add("pid_i", double_t, 0, "PID - Integral gain", 41.0, 0.0, 100.0)
-gen.add("pid_d", double_t, 0, "PID - Derivative gain", 1.1, 0.0, 10.0)
+wheels = ["right", "left", "back"]
+
+for wheel in wheels:
+	gen.add("velocity_controllers_feedforward_" + wheel, double_t, 0, wheel + " - Feed forward gain", 0.0, 0.0, 1.0)
+	gen.add("velocity_controllers_static_friction_" + wheel, double_t, 0, wheel + " - Static friction", 0.0, 0.0, 1.0)
+	gen.add("velocity_controllers_pid_p_" + wheel, double_t, 0, wheel + " - PID - Proportionnal gain", 0.0, 0.0, 1.0)
+	gen.add("velocity_controllers_pid_i_" + wheel, double_t, 0, wheel + " - PID - Integral gain", 0.0, 0.0, 1.0)
+	gen.add("velocity_controllers_pid_d_" + wheel, double_t, 0, wheel + " - PID - Derivative gain", 0.0, 0.0, 1.0)
 
 exit(gen.generate(PACKAGE, "hardware_interface", "PID"))
