--- a/ros/src/sd_hardware_interface/config/r1_hardware_interface.yaml
+++ b/ros/src/sd_hardware_interface/config/r1_hardware_interface.yaml
@@ -46,9 +46,9 @@ hardware_interface:
 
   # Feedfordward gain (If pwm increases by "pwm_max*velocity_controllers_feedforward_x"
   # the wheel x speed up by 1 rad/s)
-  velocity_controllers_feedforward_right: 0.01
-  velocity_controllers_feedforward_left: 0.01
-  velocity_controllers_feedforward_back: 0.01
+  velocity_controllers_feedforward_right: 0.007
+  velocity_controllers_feedforward_left: 0.007
+  velocity_controllers_feedforward_back: 0.007
 
   # Minimum torque allowing the wheel to turn (percentage of pwm_max)
   velocity_controllers_static_friction_right: 0.3
@@ -56,16 +56,20 @@ hardware_interface:
   velocity_controllers_static_friction_back: 0.3
 
   # PID 
-  velocity_controllers_pid_p_right: 0.01
-  velocity_controllers_pid_p_left: 0.01
-  velocity_controllers_pid_p_back: 0.01
-  velocity_controllers_pid_i_right: 0.01
-  velocity_controllers_pid_i_left: 0.01
-  velocity_controllers_pid_i_back: 0.01
-  velocity_controllers_pid_d_right: 0.005
-  velocity_controllers_pid_d_left: 0.005
-  velocity_controllers_pid_d_back: 0.005
+  velocity_controllers_pid_p_right: 0.05
+  velocity_controllers_pid_p_left: 0.05
+  velocity_controllers_pid_p_back: 0.05
+  velocity_controllers_pid_i_right: 0.02
+  velocity_controllers_pid_i_left: 0.02
+  velocity_controllers_pid_i_back: 0.02
+  velocity_controllers_pid_d_right: 0.0
+  velocity_controllers_pid_d_left: 0.0
+  velocity_controllers_pid_d_back: 0.0
 
-rosserial_server:
+rosserial_server_motor:
   baud: 115200
   port: /dev/ttyUSBMotor
+
+rosserial_serveur_pince:
+  baud: 115200
+  port: /dev/ttyAMA0
