Fix conf for sesrvo teleop

--- a/ros/src/sd_hardware_interface/config/r1_hardware_interface.yaml
+++ b/ros/src/sd_hardware_interface/config/r1_hardware_interface.yaml
@@ -70,6 +70,6 @@ rosserial_server_motor:
   baud: 115200
   port: /dev/ttyUSBMotor
 
-rosserial_serveur_pince:
+rosserial_server_pince:
   baud: 115200
   port: /dev/ttyAMA0
