--- a/ros/src/sd_description/package.xml
+++ b/ros/src/sd_description/package.xml
@@ -12,4 +12,6 @@
   <license>MIT</license>
   <url type="website">https://github.com/julienbayle/stardust</url>
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>ydlidar</build_depend>
+  <exec_depend>ydlidar</exec_depend>
 </package>
