--- a/ros/src/sd_sensor/config/r1_laser_config.yaml
+++ b/ros/src/sd_sensor/config/r1_laser_config.yaml
@@ -13,3 +13,11 @@ ydlidar:
   ignore_array: ""
   samp_rate: 9
   frequency: 7
+
+r1_laser_scan_filter:
+  scan_filter_chain:
+  - name: bounds_repeat
+    type: sd_sensor/LaserScanAngularBoundsListFilter
+    params:
+      angles: [[-2.94, -1.25], [-0.85, 0.84], [1.24, 2.94]]
+      angles2: [[-0.85, 0.84], [1.24, 2.94]]
