--- a/ros/src/sd_sensor/package.xml
+++ b/ros/src/sd_sensor/package.xml
@@ -53,6 +53,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>filters</build_depend>
   <build_depend>pluginlib</build_depend>
+  <build_depend>ydlidar</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>filters</build_export_depend>
@@ -61,6 +62,7 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>filters</exec_depend>
   <exec_depend>pluginlib</exec_depend>
+  <exec_depend>ydlidar</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
