--- a/ros/src/sd_sensor/config/r1_sensor_config.yaml
+++ b/ros/src/sd_sensor/config/r1_sensor_config.yaml
@@ -21,3 +21,11 @@ r1_laser_scan_filter:
     params:
       angles: [[-2.94, -1.25], [-0.85, 0.84], [1.24, 2.94]]
       angles2: [[-0.85, 0.84], [1.24, 2.94]]
+
+mpu6050:
+  bias_gx: -0.0916577642343
+  bias_gy: 0.0171695100273
+  bias_gz: -0.0133550995184
+  bias_ax: 0.728509733081
+  bias_ay: -0.191710567018
+  bias_az: -0.206770551682
