Tune navigation parameters

--- a/ros/src/sd_navigation/config/r2_costmap_common_params.yaml
+++ b/ros/src/sd_navigation/config/r2_costmap_common_params.yaml
@@ -4,29 +4,4 @@ footprint: [[-0.075, 0.130], [0.075, 0.130], [0.075, -0.130], [-0.075, -0.130]]
 #robot_radius: ir_of_robot
 inflation_radius: 0.005
 cost_scaling_factor: 10.0
-
-observation_sources: lidar sonar_left sonar_right
-
-lidar: {
-  sensor_frame: r2/lidar_link,
-  data_type: LaserScan,
-  topic: /r2/laser/scan_filtered,
-  clearing: true,
-  marking: true
-}
-
-sonar_left: { 
-  sensor_frame: r2/sonar_left_link,
-  data_type: PointCloud,
-  topic: /r2/sonar/left_point_cloud,
-  clearing: true,
-  marking: true
-}
-
-sonar_right: { 
-  sensor_frame: r2/sonar_right_link,
-  data_type: PointCloud,
-  topic: /r2/sonar/right_point_cloud,
-  clearing: true,
-  marking: true
-}
+transform_tolerance: 0.3
