--- a/ros/src/sd_navigation/config/r1_costmap_common_params.yaml
+++ b/ros/src/sd_navigation/config/r1_costmap_common_params.yaml
@@ -4,5 +4,4 @@ footprint: [[-0.165, -0.035], [-0.165, 0.035], [0.038, 0.165], [0.118, 0.118], [
 #robot_radius: ir_of_robot
 inflation_radius: 0.005
 cost_scaling_factor: 10.0
-
-#observation_sources: 
+transform_tolerance: 0.3
