--- a/ros/src/sd_navigation/config/r1_move_base.yaml
+++ b/ros/src/sd_navigation/config/r1_move_base.yaml
@@ -12,12 +12,22 @@ local_costmap:
   publish_frequency: 2.0
   static_map: false
   rolling_window: true
-  width: 2.0
-  height: 3.0
-  origin_x: -2.0
+  width: 1.0
+  height: 1.0
+  origin_x: -0.5
   origin_y: 0.0
   resolution: 0.01
   transform_tolerance: 0.2
+
+  observation_sources: lidar
+
+  lidar: {
+    sensor_frame: r1/laser_frame,
+    data_type: LaserScan,
+    topic: /r1/laser/scan_filtered,
+    clearing: true,
+    marking: true
+  }
   
 TrajectoryPlannerROS:
   max_vel_x: 0.45
