--- a/ros/src/sd_localization/config/r1_localization.yaml
+++ b/ros/src/sd_localization/config/r1_localization.yaml
@@ -107,22 +107,22 @@ r1_imu_filter_madgwick:
   stateless: false
 
 r1_amcl:
-  min_particles: 500
+  min_particles: 100
   max_particles: 5000
-  kld_err: 0.05
+  kld_err: 0.01
   kld_z: 0.99
-  update_min_d: 0.0
-  update_min_a: 0.0
-  resample_interval: 1
+  update_min_d: 0.0 #0.1
+  update_min_a: 0.0 #0.5236 # pi/6
+  resample_interval: 2
   transform_tolerance: 0.1
   recovery_alpha_slow: 0.001
   recovery_alpha_fast: 0.1
-  initial_pose_x: 0.0
-  initial_pose_y: 0.0
-  initial_pose_a: 0.0
-  initial_cov_xx: 100.0 # 1.0²
-  initial_cov_yy: 1000.0 # 1.5²
-  #initial_cov_aa: 39.47 # (2*pi)²
+#  initial_pose_x: 0.0
+#  initial_pose_y: 0.0
+#  initial_pose_a: 0.0
+#  initial_cov_xx: 0.25 # 0.5*0.5
+#  initial_cov_yy: 0.25 # 0.5*0.5
+#  initial_cov_aa: 39.47 # (2*pi)²
   gui_publish_rate: 10.0
   save_pose_rate: 0.5
   use_map_topic: true
@@ -131,10 +131,10 @@ r1_amcl:
   laser_min_range: -1.0
   laser_max_range: -1.0
   laser_max_beams: 30
-  laser_z_hit: 0.5
-  laser_z_short: 0.05
+  laser_z_hit: 0.95
+  laser_z_short: 0.1
   laser_z_max: 0.05
-  laser_z_rand: 0.5
+  laser_z_rand: 0.05
   laser_sigma_hit: 0.2
   laser_lambda_short: 0.1
   laser_likelihood_max_dist: 2.0
@@ -144,15 +144,14 @@ r1_amcl:
   beam_skip_distance: 0.5
   beam_skip_threshold: 0.3
   
-  odom_model_type: "diff-corrected"
-  odom_alpha5: 0.1
+  odom_model_type: "omni-corrected"
   # Publish scans from best pose at a max of 10 Hz
   odom_alpha1: 0.2
   odom_alpha2: 0.2
   # translation std dev, m
-  odom_alpha3: 0.8
+  odom_alpha3: 0.2
   odom_alpha4: 0.2
-  #odom_alpha5: 0.2
+  odom_alpha5: 0.2
   odom_frame_id: "r1/odom"
   base_frame_id: "r1/base_link"
   global_frame_id: "map"
@@ -163,3 +162,16 @@ r1_snap_map:
   laser_frame: "r1/laser_frame"
   base_frame: "r1/base_link"
   map_frame: "map"
+
+  scan_rate: 2.0
+  age_threshold: 1.0
+  icp_inlier_dist: 0.1
+  icp_inlier_threshold: 0.9
+  icp_num_iter: 250
+  angle_upper_threshold: 0.5236 #pi/6
+  dist_change_threshold: 0.05
+  angle_change_threshold: 0.01
+  update_age_threshold: 0.0
+  pose_covariance_trans: 1.5
+
+  debug: false
