--- a/ros/src/sd_navigation/config/r1_costmap_common_params.yaml
+++ b/ros/src/sd_navigation/config/r1_costmap_common_params.yaml
@@ -1,7 +1,9 @@
-obstacle_range: 2.5
+obstacle_range: 1.0
 raytrace_range: 3.0
 footprint: [[-0.165, -0.035], [-0.165, 0.035], [0.038, 0.165], [0.118, 0.118], [0.118, -0.118], [0.038, -0.165]]
 #robot_radius: ir_of_robot
-inflation_radius: 0.005
-cost_scaling_factor: 10.0
 transform_tolerance: 0.3
+
+inflation_layer:
+  cost_scaling_factor: 10.0
+  inflation_radius: 0.2
