--- a/ros/src/sd_navigation/config/r1_move_base.yaml
+++ b/ros/src/sd_navigation/config/r1_move_base.yaml
@@ -1,3 +1,18 @@
+base_global_planner: "global_planner/GlobalPlanner"
+base_local_planner: "base_local_planner/TrajectoryPlannerROS"
+recovery_behaviors: [{name: conservative_reset, type: clear_costmap_recovery/ClearCostmapRecovery}, {name: rotate_recovery, type: rotate_recovery/RotateRecovery}, {name: aggressive_reset, type: clear_costmap_recovery/ClearCostmapRecovery}]
+controller_frequency: 20.0
+planner_patience: 5.0
+controller_patience: 15.0
+conservative_reset_dist: 3.0
+recovery_behavior_enabled: true
+clearing_rotation_allowed: true
+shutdown_costmaps: false
+oscillation_timeout: 0.0
+oscillation_distance: 0.5
+planner_frequency: 5.0
+max_planning_retries: -1
+
 global_costmap:
   global_frame: map
   robot_base_frame: r1/base_link
@@ -12,12 +27,11 @@ local_costmap:
   publish_frequency: 2.0
   static_map: false
   rolling_window: true
-  width: 1.0
-  height: 1.0
-  origin_x: -0.5
+  width: 2.0
+  height: 2.0
+  origin_x: -1.0
   origin_y: 0.0
   resolution: 0.01
-  transform_tolerance: 0.2
 
   observation_sources: lidar
 
@@ -29,14 +43,65 @@ local_costmap:
     marking: true
   }
   
+GlobalPlanner:
+  allow_unknown: true
+  default_tolerance: 0.0
+  visualize_potential: false
+  use_dijkstra: true
+  use_quadratic: true
+  use_grid_path: false
+  old_navfn_behavior: false
+  lethal_cost: 253
+  neutral_cost: 50
+  cost_factor: 3.0
+  publish_potential: true
+  orientation_mode: 0
+  orientation_window_size: 1
+
 TrajectoryPlannerROS:
+  # Robot Configuration Parameters
+  acc_lim_x: 2.5
+  acc_lim_y: 2.5
+  acc_lim_theta: 3.2
+
   max_vel_x: 0.45
   min_vel_x: 0.1
   max_vel_theta: 1.0
+  min_vel_theta: -1.0
   min_in_place_vel_theta: 0.4
-
-  acc_lim_theta: 3.2
-  acc_lim_x: 2.5
-  acc_lim_y: 2.5
+  escape_vel: -0.1
 
   holonomic_robot: true
+  y_vels: [-0.3, -0.1, 0.1, 0.3]
+
+  # Goal Tolerance Parameters
+  yaw_goal_tolerance: 0.05
+  xy_goal_tolerance: 0.10
+  latch_xy_goal_tolerance: false
+
+  # Forward Simulation Parameters
+  sim_time: 1.0
+  sim_granularity: 0.025
+  #angular_sim_granularity: 0.025
+  vx_samples: 3
+  vtheta_samples: 20
+
+  controller_frequency: 20.0
+
+  # Trajectory Scoring Parameters
+  meter_scoring: false
+  pdist_scale: 0.6
+  gdist_scale: 0.8
+  occdist_scale: 0.01
+  heading_lookahead: 0.325
+  heading_scoring: false
+  heading_scoring_timestep: 0.8
+  dwa: true
+  publish_cost_grid_pc: false
+  global_frame_id: 'r1/odom'
+
+  # Oscillation Prevention Parameters
+  oscillation_reset_dist: 0.05
+
+  # Global Plan Parameters
+  prune_plan: true
